use wstunnel rust version

--- a/server/wstunnel.service
+++ b/server/wstunnel.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=nobody
-ExecStart=/usr/local/bin/wstunnel -v --server ws://127.0.0.1:55555 --restrictTo=127.0.0.1:58923
+ExecStart=/usr/local/bin/wstunnel server ws://127.0.0.1:55555 --restrict-to 127.0.0.1:58923
 Restart=no
 
 [Install]
